<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAsh"
    android:padding="10dp"
    >

    <android.support.constraint.Guideline
        android:id="@+id/parentLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.0" />

    <android.support.constraint.Guideline
        android:id="@+id/parentRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1.0" />

    <android.support.v7.widget.CardView

        android:id="@+id/cardView"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:clickable="true"


        card_view:cardBackgroundColor="@color/colorFragment"
        card_view:cardCornerRadius="4dp"
        card_view:cardElevation="5dp"
        card_view:contentPadding="5dp"

    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constrain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true">

        <android.support.constraint.Guideline
            android:id="@+id/centerGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <android.support.constraint.Guideline
            android:id="@+id/originLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.0" />

        <android.support.constraint.Guideline
            android:id="@+id/originRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1.0" />

        <android.support.constraint.Guideline
            android:id="@+id/ninetyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <TextView
            android:id="@+id/runName"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:text="@string/runName"

            android:textAlignment="textStart"
            android:textColor="@color/colorAccent2"
            android:textSize="30sp"
            app:layout_constraintDimensionRatio="H,3:1"
            app:layout_constraintLeft_toRightOf="@id/originLeft"
            app:layout_constraintRight_toLeftOf="@id/centerGuide"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/runDate"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:text="@string/runDate"
            android:textColor="@color/colorAccent"
            android:textSize="30dp"

            app:layout_constraintBottom_toBottomOf="@id/runName"
            app:layout_constraintDimensionRatio="H,3:1"
            app:layout_constraintLeft_toRightOf="@id/centerGuide"
            app:layout_constraintRight_toRightOf="@id/originRight"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/runLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/runName"

            android:text="@string/runLength"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runName" />

        <TextView
            android:id="@+id/maxTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/maxTemp"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/runLength" />

        <TextView
            android:id="@+id/minTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            android:text="@string/minTemp"
            android:textAlignment="textStart"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"

            app:layout_constraintLeft_toRightOf="@id/centerGuide"
            app:layout_constraintTop_toBottomOf="@id/runLength" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:drawable/ic_delete"
            android:backgroundTint="@color/colorAccent2"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
</LinearLayout>