<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_3">

    <android.support.constraint.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1">

    </android.support.constraint.Guideline>


    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/middleGuideline"
        app:layout_constraintGuide_percent="0.4"
        android:orientation="vertical"
        >

    </android.support.constraint.Guideline>


    <android.support.constraint.Guideline
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/endGuideline"
        app:layout_constraintGuide_percent="0.9"
        android:orientation="vertical"
        >

    </android.support.constraint.Guideline>

    <android.support.constraint.Guideline
        android:id="@+id/extraMiddleGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="192dp">

    </android.support.constraint.Guideline>

    <android.support.constraint.Guideline
        android:id="@+id/middleGuideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollX="128dp"
        android:scrollY="128dp"
        android:scrollbarSize="64dp"
        android:scrollbars="horizontal"
        app:layout_constraintGuide_percent="0.6">

    </android.support.constraint.Guideline>

    <EditText
        android:id="@+id/runNameSave"
        android:layout_width="307dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/runName"
        android:ems="12"
        android:inputType="textPersonName"
        android:text="@string/runName"
        android:textAlignment="center"
        android:textColor="@color/colorAccent2"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:ems="0"
        android:text="@string/currentTemp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintLeft_toRightOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/extraMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/runNameSave" />

    <TextView
        android:id="@+id/currentTempNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="0"
        android:enabled="false"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent2"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintLeft_toRightOf="@id/extraMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/runNameSave"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintRight_toLeftOf="@id/endGuideline"/>


    <TextView
        android:id="@+id/maxTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="0"
        android:text="@string/maxTempNum"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/extraMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/currentTempSeek" />

    <TextView
        android:id="@+id/maxTempNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="0"
        android:enabled="false"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent2"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintLeft_toLeftOf="@id/extraMiddleGuideline"
        app:layout_constraintRight_toLeftOf="@id/endGuideline"
        app:layout_constraintTop_toBottomOf="@id/currentTempSeek" />


    <TextView
        android:id="@+id/minTemp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="0"
        android:text="@string/minTempText"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"

        android:textStyle="bold"
        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintLeft_toLeftOf="@id/leftGuideline"
        app:layout_constraintRight_toLeftOf="@id/extraMiddleGuideline"
        app:layout_constraintTop_toBottomOf="@id/maxTemp" />

    <TextView
        android:id="@+id/minTempNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:ems="0"
        android:enabled="false"
        android:text="0"
        android:textAlignment="textStart"
        android:textColor="@color/colorAccent2"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintDimensionRatio="H,3:1"
        app:layout_constraintLeft_toLeftOf="@id/extraMiddleGuideline"
        app:layout_constraintRight_toLeftOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/minTemp" />

    <SeekBar
        android:id="@+id/currentTempSeek"
        style="@android:style/Widget.DeviceDefault.SeekBar"
        android:layout_width="330dp"
        android:layout_height="23dp"
        android:max="120"
        android:min="32"
        android:progress="64"
        android:progressBackgroundTint="@color/colorWhite"
        android:progressTint="@color/colorWhite"
        android:scrollbarTrackVertical="@color/colorWhite"
        android:thumb="@android:drawable/list_selector_background"
        app:layout_constraintEnd_toStartOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@id/currentTempNum" />


</android.support.constraint.ConstraintLayout>